<resources>
    <string name="app_name">知发</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_activity_image_view_desc">发型图片</string>
    <string name="image_detail_image_view_desc">发型图片</string>
    <string name="favor_btn_desc">收藏</string>
    <string name="delete_btn_desc">删除</string>
    <string name="follow_btn_text">+关注</string>
    <string name="login_btn_text">登录</string>
    <string name="register_btn_text">注册</string>
    <string name="selfie_confirm_text">确认</string>
    <string name="selfie_camera_text">重拍</string>
    <string name="profile_user_name">用户名</string>
    <string name="profile_user_bio">用户简介</string>
    <string name="profile_user_collection">我的收藏</string>
    <string name="profile_user_document">我的档案</string>
    <string name="profile_user_message">我的通知</string>
    <string name="profile_user_follow">关注</string>
    <string name="profile_user_fan">粉丝</string>
    <string name="profile_user_haircut">发型</string>
    <string name="search_hint">搜索发型</string>
    <string name="user_comment_hint">编写评论。。。</string>

    <string name="barber_upload_confirm">上传</string>
    <string name="barber_upload_redo">相册</string>
    <string name="barber_main_upload">上传新发型</string>
    <string name="barber_main_push">推送消息</string>
    <string name="barber_main_trend">流行趋势</string>
    <string name="barber_main_gallery">我的发型库</string>
    <string name="barber_main_push_hint">编辑推送信息。。。</string>
    <string name="barber_push_cancel">取消</string>
    <string name="barber_push_ok">确定</string>

    <string name="haircut_img_trans">HAIRCUT_IMAGE_TRANS</string>
    <string name="favor_btn_trans">FAVOR_BTN_TRANS</string>
    <string name="del_btn_trans">DELETE_BTN_TRANS</string>
    <string-array name="role_entry">
        <item>顾客</item>
        <item>理发师</item>
    </string-array>
    <string-array name="gender_entry">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="hair_entry">
        <item>长</item>
        <item>短</item>
    </string-array>
</resources>
