<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:hint="@string/barber_main_push_hint"
        android:id="@+id/register_username_input"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/barber_push_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username_input"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="20dp"
        android:id="@+id/barber_push_cancel_button" />

    <Button
        android:text="@string/barber_push_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/barber_push_cancel_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="47dp"
        android:id="@+id/barber_push_ok_button" />
</RelativeLayout>