<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@android:color/holo_blue_dark">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/barber_main_user_head"
            android:src="@drawable/launcher"
            android:scaleType="fitXY"
            android:layout_marginTop="28dp"
            android:layout_marginStart="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_user_name"
            android:id="@+id/collection_user_name"
            android:layout_alignTop="@+id/barber_main_user_head"
            android:layout_alignStart="@+id/barber_main_user_bio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_bio"
            android:id="@+id/barber_main_user_bio"
            android:layout_alignBottom="@+id/barber_main_user_head"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:id="@+id/barber_main_upload_haircut">
            <TextView
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:textSize="15sp"
                android:text="@string/barber_main_upload"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:id="@+id/barber_main_push">
            <TextView
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:textSize="15sp"
                android:text="@string/barber_main_push"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:id="@+id/barber_main_trend">
            <TextView
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:textSize="15sp"
                android:text="@string/barber_main_trend"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:id="@+id/barber_main_gallery">
            <TextView
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:textSize="15sp"
                android:text="@string/barber_main_gallery"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>